Reinstll npm and surge

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+	<h1>Hey people</h1>
+	<div id="root"></div>
 	<script type="text/javascript">
 		// Single Page Apps for GitHub Pages
 		// https://github.com/rafrex/spa-github-pages
@@ -42,7 +44,7 @@
 			}
 		}(window.location))
 	</script>
-	<div id="root"></div>
+
 </body>
 
 </html>
