--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta name="theme-color" content="#000000">
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/react/16.3.2/umd/react.production.min.js">
+	<link rel="stylesheet" type="Content-Type: application/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/react/16.3.2/umd/react.production.min.js">
 
 	<title>JobSearch</title>
 </head>
